--- a/plugins/tools/defaulttool/referenceimagestool/WdgToolOptions.ui
+++ b/plugins/tools/defaulttool/referenceimagestool/WdgToolOptions.ui
@@ -155,6 +155,28 @@
       </widget>
      </item>
      <item>
+      <widget class="QPushButton" name="bnAddReferenceImageFromVisible">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>18</width>
+         <height>18</height>
+        </size>
+       </property>
+       <property name="flat">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
