--- a/plugins/dockers/widegamutcolorselector/WdgWGSelectorSettings.ui
+++ b/plugins/dockers/widegamutcolorselector/WdgWGSelectorSettings.ui
@@ -62,7 +62,7 @@
          </item>
         </widget>
        </item>
-       <item row="1" column="0">
+       <item row="2" column="0">
         <widget class="KisPopupButton" name="btnSelectorShape">
          <property name="iconSize">
           <size>
@@ -72,7 +72,7 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="1">
+       <item row="2" column="1">
         <widget class="QComboBox" name="cmbColorModel">
          <item>
           <property name="text">
@@ -92,6 +92,27 @@
          <item>
           <property name="text">
            <string>HSY'</string>
+          </property>
+         </item>
+        </widget>
+       </item>
+       <item row="1" column="0">
+        <widget class="QLabel" name="label_24">
+         <property name="text">
+          <string>Compact Shape Style:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QComboBox" name="cmbCompactShapes">
+         <item>
+          <property name="text">
+           <string>Diamond</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Triangle</string>
           </property>
          </item>
         </widget>
@@ -985,6 +1006,48 @@
    <header>KisPopupButton.h</header>
   </customwidget>
  </customwidgets>
+ <tabstops>
+  <tabstop>tabWidget</tabstop>
+  <tabstop>cmbSelectorRenderingMode</tabstop>
+  <tabstop>cmbCompactShapes</tabstop>
+  <tabstop>btnSelectorShape</tabstop>
+  <tabstop>cmbColorModel</tabstop>
+  <tabstop>grpQuickSettingsMenu</tabstop>
+  <tabstop>btnFavoriteSelectors</tabstop>
+  <tabstop>cmbSelectionColorSpace</tabstop>
+  <tabstop>chkProofColors</tabstop>
+  <tabstop>sbPopupSize</tabstop>
+  <tabstop>rbPopupHorizontal</tabstop>
+  <tabstop>rbPopupVertical</tabstop>
+  <tabstop>cbPopupScrolling</tabstop>
+  <tabstop>sbPopupPatchesRows</tabstop>
+  <tabstop>sbPatchWidth</tabstop>
+  <tabstop>sbPatchHeight</tabstop>
+  <tabstop>sbPopupMaxPatches</tabstop>
+  <tabstop>chkShadeSelUpdateExternal</tabstop>
+  <tabstop>chkShadeSelUpdateOnRightClick</tabstop>
+  <tabstop>chkShadeSelUpdateInteraction</tabstop>
+  <tabstop>sbShadeLineCount</tabstop>
+  <tabstop>sbShadeLineHeight</tabstop>
+  <tabstop>historyGroupBox</tabstop>
+  <tabstop>rbHistoryHorizontal</tabstop>
+  <tabstop>rbHistoryVertical</tabstop>
+  <tabstop>cbScrolling</tabstop>
+  <tabstop>sbHistoryRows</tabstop>
+  <tabstop>sbHistoryPatchWidth</tabstop>
+  <tabstop>sbHistoryPatchHeight</tabstop>
+  <tabstop>sbHistoryMaxPatches</tabstop>
+  <tabstop>ckHistoryClearButton</tabstop>
+  <tabstop>commonColorsGroupBox</tabstop>
+  <tabstop>rbCommonColorsHorizontal</tabstop>
+  <tabstop>rbCommonColorsVertical</tabstop>
+  <tabstop>cbCommonColorsScrolling</tabstop>
+  <tabstop>sbCommonColorsRows</tabstop>
+  <tabstop>sbCommonColorsPatchWidth</tabstop>
+  <tabstop>sbCommonColorsPatchHeight</tabstop>
+  <tabstop>sbCommonColorsPatches</tabstop>
+  <tabstop>checkBox</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
