--- a/libs/ui/forms/wdgdisplaysettings.ui
+++ b/libs/ui/forms/wdgdisplaysettings.ui
@@ -414,7 +414,7 @@
          <property name="title">
           <string>Selection Overlay:</string>
          </property>
-         <layout class="QFormLayout" name="formLayout_6">
+         <layout class="QGridLayout" name="gridLayout_2">
           <item row="0" column="0">
            <widget class="QLabel" name="label_2">
             <property name="sizePolicy">
@@ -427,22 +427,35 @@
              <string>Outline opacity:</string>
             </property>
             <property name="alignment">
-             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+             <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
             </property>
            </widget>
           </item>
-          <item row="0" column="1">
-           <widget class="KisDoubleSliderSpinBox" name="sldSelectionOutlineOpacity"/>
+          <item row="0" column="1" colspan="2">
+           <widget class="KisDoubleSliderSpinBox" name="sldSelectionOutlineOpacity">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+           </widget>
           </item>
           <item row="1" column="0">
            <widget class="QLabel" name="label_12">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
             <property name="text">
-             <string>Overlay color 1:</string>
+             <string>Unselected areas overlay:</string>
             </property>
            </widget>
           </item>
           <item row="1" column="1">
-           <widget class="KisColorButton" name="btnSelectionOverlayColor1">
+           <widget class="KisColorButton" name="btnUnselectedAreasOverlayColor">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
               <horstretch>0</horstretch>
@@ -454,15 +467,14 @@
             </property>
            </widget>
           </item>
-          <item row="2" column="0">
-           <widget class="QLabel" name="label_3">
-            <property name="text">
-             <string>Overlay opacity 1:</string>
+          <item row="1" column="2">
+           <widget class="KisDoubleSliderSpinBox" name="sldUnselectedAreasOverlayOpacity">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
             </property>
-           </widget>
-          </item>
-          <item row="2" column="1">
-           <widget class="KisDoubleSliderSpinBox" name="sldSelectionOverlayOpacity1">
             <property name="minimumSize">
              <size>
               <width>50</width>
@@ -471,15 +483,21 @@
             </property>
            </widget>
           </item>
-          <item row="3" column="0">
+          <item row="2" column="0">
            <widget class="QLabel" name="label_13">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
             <property name="text">
-             <string>Overlay color 2:</string>
+             <string>Selected areas overlay:</string>
             </property>
            </widget>
           </item>
-          <item row="3" column="1">
-           <widget class="KisColorButton" name="btnSelectionOverlayColor2">
+          <item row="2" column="1">
+           <widget class="KisColorButton" name="btnSelectedAreasOverlayColor">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
               <horstretch>0</horstretch>
@@ -491,15 +509,14 @@
             </property>
            </widget>
           </item>
-          <item row="4" column="0">
-           <widget class="QLabel" name="label_8">
-            <property name="text">
-             <string>Overlay opacity 2:</string>
+          <item row="2" column="2">
+           <widget class="KisDoubleSliderSpinBox" name="sldSelectedAreasOverlayOpacity">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
             </property>
-           </widget>
-          </item>
-          <item row="4" column="1">
-           <widget class="KisDoubleSliderSpinBox" name="sldSelectionOverlayOpacity2">
             <property name="minimumSize">
              <size>
               <width>50</width>
