Replace the Backers tab with a Sponsors tab
The last kickstarter is a long time ago, and I'm not even sure we
still have permission for all those names. And our sponsors asked
for this.

The png files have been optipng'ed

--- a/libs/ui/forms/wdgaboutapplication.ui
+++ b/libs/ui/forms/wdgaboutapplication.ui
@@ -63,12 +63,15 @@
      </widget>
      <widget class="QWidget" name="kickstarterTab">
       <attribute name="title">
-       <string>Backers</string>
+       <string>Sponsors</string>
       </attribute>
       <layout class="QVBoxLayout" name="verticalLayout_4">
        <item>
-        <widget class="QTextEdit" name="lblKickstarter">
+        <widget class="QTextBrowser" name="lblKickstarter">
          <property name="readOnly">
+          <bool>true</bool>
+         </property>
+         <property name="openExternalLinks">
           <bool>true</bool>
          </property>
         </widget>
