Change design of Reference Images Tool Options docker
Before this commit, the first icon of the second section
(the one to add new reference images) was a "folder" icon,
and there was a label saying "Other options:" in the third section.
This commit changes the icon to a picture icon and removes the label.

--- a/plugins/tools/defaulttool/referenceimagestool/WdgToolOptions.ui
+++ b/plugins/tools/defaulttool/referenceimagestool/WdgToolOptions.ui
@@ -210,13 +210,13 @@
      </property>
     </widget>
    </item>
-   <item>
+   <!--item>
     <widget class="QLabel" name="label1">
      <property name="text">
       <string>Other options:</string>
      </property>
     </widget>
-   </item>
+   </item-->
    
    
    <item>
