Add Delete selected images button to Reference Tool
Before this commit, there was no graphical way to delete
selected images (only context menu -> Cut).
This commit adds a button saying "Delete Selected Images"
in the Reference Tool Options docker.

--- a/plugins/tools/defaulttool/referenceimagestool/WdgToolOptions.ui
+++ b/plugins/tools/defaulttool/referenceimagestool/WdgToolOptions.ui
@@ -50,6 +50,45 @@
    <item>
     <widget class="QComboBox" name="referenceImageLocationCombobox"/>
    </item>
+
+
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout3">
+     <property name="spacing">
+      <number>0</number>
+     </property>
+
+     <item>
+      <spacer name="horizontalSpacer">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QPushButton" name="bnDeleteSelectedImages">
+       <property name="text">
+        <string>Delete Selected Images</string>
+       </property>
+       <property name="sizePolicy">
+          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+
+
+
    <item>
     <widget class="QLabel" name="referenceImageOptionsLabel">
      <property name="text">
