Create glyph model and make a glyph palette to display said model.
Right now this doesn't do much besides show the basic character map
and give some feedback when a given glyph has alternates.

--- a/plugins/tools/svgtexttool/svgtexttool.qrc
+++ b/plugins/tools/svgtexttool/svgtexttool.qrc
@@ -1,20 +1,16 @@
-<!DOCTYPE RCC>
-<!--
-  SPDX-FileCopyrightText: none
-  SPDX-License-Identifier: CC0-1.0
--->
-<RCC version="1.0">
+<RCC>
     <qresource prefix="/kxmlgui5">
         <file alias="svgtexttool.xmlgui">svgtexttool.xmlgui</file>
     </qresource>
     <qresource prefix="/">
-      <file>tool_text_basic.xpm</file>
-      <file>tool_text_inline_horizontal.xpm</file>
-      <file>tool_text_inline_vertical.xpm</file>
-      <file>tool_text_on_path.xpm</file>
-      <file>tool_text_in_shape.xpm</file>
-      <file>tool_text_i_beam_horizontal.xpm</file>
-      <file>tool_text_i_beam_vertical.xpm</file>
-      <file>tool_text_i_beam_horizontal_done.xpm</file>
+        <file>tool_text_basic.xpm</file>
+        <file>tool_text_inline_horizontal.xpm</file>
+        <file>tool_text_inline_vertical.xpm</file>
+        <file>tool_text_on_path.xpm</file>
+        <file>tool_text_in_shape.xpm</file>
+        <file>tool_text_i_beam_horizontal.xpm</file>
+        <file>tool_text_i_beam_vertical.xpm</file>
+        <file>tool_text_i_beam_horizontal_done.xpm</file>
+        <file alias="GlyphPalette.qml">glyphpalette/GlyphPalette.qml</file>
     </qresource>
 </RCC>
