--- a/plugins/tools/svgtexttool/WdgSvgTextOptionWidget.ui
+++ b/plugins/tools/svgtexttool/WdgSvgTextOptionWidget.ui
@@ -15,12 +15,51 @@
    </rect>
   </property>
   <layout class="QGridLayout" name="gridLayout">
+   <item row="4" column="0">
+    <widget class="QGroupBox" name="groupBoxDebug">
+     <property name="title">
+      <string notr="true">Debug Tools</string>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_2">
+      <item>
+       <widget class="QCheckBox" name="chkDbgCharBbox">
+        <property name="text">
+         <string notr="true">Show char bounding boxes</string>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QCheckBox" name="chkDbgLineBox">
+        <property name="text">
+         <string notr="true">Show line boxes</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
    <item row="1" column="0">
     <widget class="QPushButton" name="btnEdit">
      <property name="text">
       <string>Edit Text</string>
      </property>
     </widget>
+   </item>
+   <item row="5" column="0">
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>0</width>
+       <height>0</height>
+      </size>
+     </property>
+    </spacer>
    </item>
    <item row="0" column="0">
     <widget class="QGroupBox" name="defsOptions">
@@ -287,43 +326,11 @@
      </property>
     </widget>
    </item>
-   <item row="4" column="0">
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>0</width>
-       <height>0</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
    <item row="3" column="0">
-    <widget class="QGroupBox" name="groupBoxDebug">
-     <property name="title">
-      <string notr="true">Debug Tools</string>
+    <widget class="QPushButton" name="btnGlyphPalette">
+     <property name="text">
+      <string>Glyph Palette</string>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout_2">
-      <item>
-       <widget class="QCheckBox" name="chkDbgCharBbox">
-        <property name="text">
-         <string notr="true">Show char bounding boxes</string>
-        </property>
-        <property name="checked">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QCheckBox" name="chkDbgLineBox">
-        <property name="text">
-         <string notr="true">Show line boxes</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
     </widget>
    </item>
   </layout>
