Improve glyph palette functionality by moving the delegate to its own file.
By moving the delegate to its own file, we can have different behaviour for
clicking on a glyph for each gridview, which in turn lets us specify whether
to change the previous glyph or to create a pop-up to insert a glyph alt.

--- a/plugins/tools/svgtexttool/svgtexttool.qrc
+++ b/plugins/tools/svgtexttool/svgtexttool.qrc
@@ -12,5 +12,6 @@
         <file>tool_text_i_beam_vertical.xpm</file>
         <file>tool_text_i_beam_horizontal_done.xpm</file>
         <file alias="GlyphPalette.qml">glyphpalette/GlyphPalette.qml</file>
+        <file alias="GlyphDelegate.qml">glyphpalette/GlyphDelegate.qml</file>
     </qresource>
 </RCC>
