Add ability to save and load guides

--- a/plugins/dockers/griddocker/grid_config_widget.ui
+++ b/plugins/dockers/griddocker/grid_config_widget.ui
@@ -36,7 +36,7 @@
       </size>
      </property>
      <property name="currentIndex">
-      <number>0</number>
+      <number>1</number>
      </property>
      <widget class="QWidget" name="tab">
       <attribute name="title">
@@ -867,6 +867,38 @@
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_7">
          <item>
+          <widget class="QToolButton" name="loadGuidesButton">
+           <property name="toolTip">
+            <string>Load Guide Set</string>
+           </property>
+           <property name="text">
+            <string/>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>16</width>
+             <height>16</height>
+            </size>
+           </property>
+           <property name="autoRaise">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QToolButton" name="saveGuidesButton">
+           <property name="toolTip">
+            <string>Save Guide Set</string>
+           </property>
+           <property name="text">
+            <string/>
+           </property>
+           <property name="autoRaise">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item>
           <spacer name="horizontalSpacer_2">
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
@@ -883,6 +915,12 @@
           <widget class="QPushButton" name="deleteAllGuidesButton">
            <property name="text">
             <string>All</string>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>16</width>
+             <height>16</height>
+            </size>
            </property>
           </widget>
          </item>
