Make the revert buttons check the state of the given property.
This will prolly be reworked further in a future commit, once removing
properties has been fully implemented. This also improves the look and
feel of the docker slightly.

--- a/plugins/dockers/textproperties/textproperties.qrc
+++ b/plugins/dockers/textproperties/textproperties.qrc
@@ -29,5 +29,6 @@
         <file alias="TabSize.qml">qml/TabSize.qml</file>
         <file alias="WhiteSpace.qml">qml/WhiteSpace.qml</file>
         <file alias="UnderlinePosition.qml">qml/UnderlinePosition.qml</file>
+        <file alias="RevertPropertyButton.qml">qml/RevertPropertyButton.qml</file>
     </qresource>
 </RCC>
