--- a/plugins/dockers/textproperties/textproperties.qrc
+++ b/plugins/dockers/textproperties/textproperties.qrc
@@ -30,5 +30,6 @@
         <file alias="WhiteSpace.qml">qml/WhiteSpace.qml</file>
         <file alias="UnderlinePosition.qml">qml/UnderlinePosition.qml</file>
         <file alias="RevertPropertyButton.qml">qml/RevertPropertyButton.qml</file>
+        <file alias="TextPropertyBaseList.qml">qml/TextPropertyBaseList.qml</file>
     </qresource>
 </RCC>
